--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -82,8 +82,8 @@
         </div>
     </div>
     <!--footer - red-->
-    <div class="footer">
-        <div class="column" style="justify-content: center">
+    <div class="footer" style="justify-items: center">
+        <div class="column">
             <div class="text-boxes">
                 <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
             </div>
