--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -82,7 +82,7 @@
         </div>
     </div>
     <!--footer - red-->
-    <div class="footer" style="justify-items: center">
+    <div class="footer" style="align-content: center">
         <div class="column">
             <div class="text-boxes">
                 <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
