added flex to footer

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -82,10 +82,10 @@
         </div>
     </div>
     <!--footer - red-->
-    <div class="footer" style="align-content: center">
+    <div class="footer">
         <div class="column">
             <div class="text-boxes">
-                <p>This is a <a href="https://github.com/SaraYohannes" target="_blank">github link</a></p>
+                <p>This is a github link?</p>
             </div>
             <div class="text-boxes">
                 <p>This is a sketchfab link?</p>
