added email-modal class
to css for testing how it acts

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -29,6 +29,9 @@
                 <div class="text-boxes">
                     <h3>MAIL</h3>
                     <p>mail@mail.com</p>
+                    <div class="email-modal">
+                        <p>a modal, as a treat!</p>
+                    </div>
                 </div>
             </div>
         </div>
