added .closebutton class
for closing the modal

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -14,9 +14,15 @@
     <div class="htop">
        <p>HEADER</p>
     </div>
+
+    <!--e-mail modal-->
     <div class="email-modal">
         <p>a modal, as a treat!</p>
+        <div class="close-button">
+            <p>X</p>
+        </div>
     </div>
+    
     <div class="column">
         <!--columns - contact info-->
         <div class="column contact-info">
