change html for close button
to span from div

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,9 +18,7 @@
     <!--e-mail modal-->
     <div class="email-modal">
         <p>a modal, as a treat!</p>
-        <div class="close-button">
-            <p>X</p>
-        </div>
+        <span class="close-button">&times;</span>
     </div>
     
     <div class="column">
