--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,7 +17,7 @@
 
     <!--e-mail modal-->
     <div class="email-modal">
-        <p>a modal, as a treat!</p>
+        <h4>Send me a mail! I'd love to hear from you!</h4>
         <span class="close-button">&times;</span>
     </div>
     
