update moved xbutton

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,8 +17,7 @@
 
     <!--e-mail modal-->
     <div class="email-modal">
-        <h4>Send me a mail! I'd love to hear from you!</h4>
-        <span class="close-button">&times;</span>
+        <h4>Send me a mail! I'd love to hear from you!<span class="close-button">&times;</span></h4>
     </div>
     
     <div class="column">
