--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -17,9 +17,11 @@
 
     <!--e-mail modal-->
     <div class="email-modal">
-        <h4>Send me a mail! I'd love to hear from you!<span class="close-button">&times;</span></h4>
+        <div class="modal-content">
+            <h4>Send me a mail! I'd love to hear from you!<span class="close-button">&times;</span></h4>
+        </div>
     </div>
-    
+        
     <div class="column">
         <!--columns - contact info-->
         <div class="column contact-info">
