update html, moved span out of h3, css, added padding to button

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,7 +18,7 @@
     <!--e-mail modal-->
     <div class="email-modal">
         <div class="modal-content">
-            <h4>Send me a mail! I'd love to hear from you!<span class="close-button">&times;</span></h4>
+            <h4>Send me a mail! I'd love to hear from you!</h4><span class="close-button">&times;</span>
         </div>
     </div>
         
