--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -18,7 +18,7 @@
     <!--e-mail modal-->
     <div class="email-modal">
         <div class="modal-content">
-            <p style="display:inline">Send me a mail! I'd love to hear from you!</p><span class="close-button">&times;</span>
+            <p style="float: left">Send me a mail! I'd love to hear from you!</p><span class="close-button">&times;</span>
         </div>
     </div>
         
