added JavaScript file emailModal
this will be the functionalities of the email modal and email related functionality in my project

--- a/SaraYohannes.github.io/frontpage.html
+++ b/SaraYohannes.github.io/frontpage.html
@@ -15,10 +15,12 @@
        <p>HEADER</p>
     </div>
 
+    <script src="emailModal.js"></script> <!--is this the correct position for js?-->
     <!--e-mail modal-->
     <div class="email-modal">
+        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><span class="close-button">&times;</span>
         <div class="modal-content">
-            <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><span class="close-button">&times;</span>
+        
         </div>
     </div>
         
