--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sara Yohannes' resume</title>
     <!--TODO:link icon for the tab-->
-    <link rel="stylesheet" href="frontstylesheet.css" />
+    <link rel="stylesheet" href="SaraYohannes.github.io/frontstylesheet.css" />
 </head>
 <body>
     <!---->
@@ -19,7 +19,7 @@
         <div class="column contact-info">
             <div class="content-space">
                 <!--picture-->
-                <img src="self-portrait_2.JPG" class="self-portrait" />
+                <img src="SaraYohannes.github.io/images/self-portrait_2.JPG" class="self-portrait" />
                 <!--information-->
                 <div class="text-boxes">
                     <h3>PHONE</h3>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="text-boxes">
                     <div class="column">
-                    <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
+                    <img src="SaraYohannes.github.io/images/Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                     <div class="text-boxes">
                         <h3>Name of project (one)</h3>
                         <p>Description of project with link...</p>
@@ -66,12 +66,12 @@
                             <h3>Name of project (two)</h3>
                             <p>Description of project with link...</p>
                         </div>
-                        <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
+                        <img src="SaraYohannes.github.io/images/Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                     </div>
                 </div>
                 <div class="text-boxes">
                     <div class="column">
-                        <img src="Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
+                        <img src="SaraYohannes.github.io/images/Item_light_parafinlampe_UNUSED_v0.PNG" class="project-illustration" />
                         <div class="text-boxes">
                             <h3>A super long name of this fantastic project (three)</h3>
                             <p>Description of project with link...</p>
