--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sara Yohannes' resume</title>
     <!--TODO:link icon for the tab-->
-    <link rel="stylesheet" href="SaraYohannes.github.io\frontstylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="SaraYohannes.github.io\frontstylesheet.css"/>
 </head>
 <body>
     <!---->
