--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="column contact-info">
             <div class="content-space">
                 <!--picture-->
-                <img src="self-portrait_2.JPG" class="self-portrait" />
+                <img src="self-portrait_2.jpg" class="self-portrait" />
                 <!--information-->
                 <div class="text-boxes">
                     <h3>PHONE</h3>
