--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--e-mail modal-->
     <div class="email-modal">
-        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><span class="close-button">&times;</span>
+        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><button class="close-button">&times;</button>
         <div class="modal-content">
         
         </div>
