--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <!--information-->
                 <div class="text-boxes">
                     <h3>MAIL</h3>
+                    <a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>
                     <p>mail@mail.com</p>
                 </div>
             </div>
