added open-button.css and to HTML

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <!--information-->
                 <div class="text-boxes">
                     <h3>MAIL</h3>
-                    <a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>
+                    <!--<a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>-->
+                    <button class="open-button">sara.seacucumber@gmail.com</button>
                     <p>mail@mail.com</p>
                 </div>
             </div>
