--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <!--information-->
                 <div class="text-boxes">
                     <h3>MAIL</h3>
-                    <!--<a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>-->
-                    <button class="open-button">sara.seacucumber@gmail.com</button>
+                    <a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>
                 </div>
             </div>
         </div>
