added a copyText-button.css
for copying text to clipboard

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <img src="self-portrait_2.jpg" class="self-portrait" />
                 <!--information-->
                 <div class="text-boxes">
-                    <h3>PHONE</h3>
-                    <p>number</p>
+                    <h4>My phone number</h4>
+                    <button class="copyText-button"><p>41294755</p></button>
                 </div>
                 <!--information-->
                 <div class="text-boxes">
-                    <h3>MAIL</h3>
+                    <h4>Send me a mail</h4>
                     <a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>
                 </div>
             </div>
