--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <p>Information</p>
                     <div class="column">
                         <div class="text-boxes">
+                            <a href="https://github.com/SaraYohannes">My github account</a>
                             <p>This is a github link?</p>
                         </div>
                         <div class="text-boxes">
@@ -104,8 +105,6 @@
     <!--footer - red-->
     <div class="footer">
     </div>
-    <!--quick links to other places than github (art), (itchio or similar)-->
-    <!-- -->
-    <script src="emailModal.js"></script> <!--is this the correct position for js?-->
+    <script src="emailModal.js"></script> 
 </body>
 </html>
