added definitions to a
of link and hover definitions

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p>Information</p>
                     <div class="column">
                         <div class="text-boxes">
-                            <a href="https://github.com/SaraYohannes">My github account</a>
+                            <a href="https://github.com/SaraYohannes" target="_blank">My github account</a>
                         </div>
                         <div class="text-boxes">
                             <p>This is a sketchfab link?</p>
