--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!--information-->
                 <div class="text-boxes">
                     <h4>Send me a mail</h4>
-                    <a href="mailto:sara.seacucumber@gmail.com">sara.seacucumber@gmail.com</a>
+                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a>
                 </div>
             </div>
         </div>
