removed dashes and replaces with underscores

--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
     </div>
 
     <!--e-mail modal-->
-    <div class="email-modal">
-        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><button class="close-button">&times;</button>
-        <div class="modal-content">
+    <div class="email_modal">
+        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><button class="close_button">&times;</button>
+        <div class="modal_content">
         
         </div>
     </div>
         
     <div class="column">
         <!--columns - contact info-->
-        <div class="column contact-info">
-            <div class="content-space">
+        <div class="column contact_info">
+            <div class="content_space">
                 <!--picture-->
-                <img src="self-portrait_2.jpg" class="self-portrait" />
+                <img src="self-portrait_2.jpg" class="self_portrait" />
                 <!--information-->
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <h4>My phone number</h4>
-                    <button class="copyText-button"><p>41294755</p></button>
+                    <button class="copyText_button"><p>41294755</p></button> <!--p.copyText-button.text-boxes-->
                 </div>
                 <!--information-->
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <h4>Send me a mail</h4>
-                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a>
+                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
                 </div>
             </div>
         </div>
         <!--column 2 - about me-->
-        <div class="column aboutme-info">
-            <div class="content-space">
-                <div class="text-boxes">
+        <div class="column aboutme_info">
+            <div class="content_space">
+                <div class="text_boxes">
                     <h3>ABOUT ME</h3>
                     <p>Information</p>
                 </div>
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <h3>RELEVANT EDUCATION</h3>
                     <p>Information</p>
                     <div class="column">
-                        <div class="text-boxes">
+                        <div class="text_boxes">
                             <a href="https://github.com/SaraYohannes" target="_blank">My github account</a>
                         </div>
-                        <div class="text-boxes">
+                        <div class="text_boxes">
                             <p>This is a sketchfab link?</p>
                         </div>
-                        <div class="text-boxes">
+                        <div class="text_boxes">
                             <p>This is a deviantart link?</p>
                         </div>
                     </div>
@@ -66,33 +66,33 @@
             </div>
         </div>
         <!--column 3 - github projects-->
-        <div class="column project-info">
-            <div class="content-space">
-                <div class="text-boxes">
+        <div class="column project_info">
+            <div class="content_space">
+                <div class="text_boxes">
                     <p>COLUMN: Projects information</p>
                 </div>
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <div class="column">
-                    <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project-illustration" />
-                    <div class="text-boxes">
+                    <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
+                    <div class="text_boxes">
                         <h3>Name of project (one)</h3>
                         <p>Description of project with link...</p>
                     </div>
                     </div>
                 </div>
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <div class="column">
-                        <div class="text-boxes">
+                        <div class="text_boxes">
                             <h3>Name of project (two)</h3>
                             <p>Description of project with link...</p>
                         </div>
-                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project-illustration" />
+                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                     </div>
                 </div>
-                <div class="text-boxes">
+                <div class="text_boxes">
                     <div class="column">
-                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project-illustration" />
-                        <div class="text-boxes">
+                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
+                        <div class="text_boxes">
                             <h3>A super long name of this fantastic project (three)</h3>
                             <p>Description of project with link...</p>
                         </div>
