added button in HTML w JS functionality
testing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <h4>Send me a mail</h4>
+                    <button onclick="butt_open">Send me a mail</button>
                     <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
                 </div>
             </div>
