update button from onclick to open_button.css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button onclick="butt_open">Send me a mail</button>
+                    <button class="open_button">Send me a mail</button>
                     <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
                 </div>
             </div>
@@ -104,6 +104,6 @@
     <!--footer - red-->
     <div class="footer">
     </div>
-    <script src="emailModal.js"></script> 
+    <script src="emailModal.js">class</script> 
 </body>
 </html>
