--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
                     <button class="open_button">Send me a mail</button>
                     <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
                 </div>
+                <!--information-->
+                <div class="text_boxes">
+                    <h4>Copy all my contact info</h4>
+                </div>
+                </div>
             </div>
-        </div>
         <!--column 2 - about me-->
         <div class="column aboutme_info">
             <div class="content_space">
