--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button class="open_button">Send me a mail</button>
+                    <h4>Send me a mail</h4>
                     <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
                 </div>
                 <!--information-->
