added open_button, added open_button:hover

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <h4>Copy all my contact info</h4>
+                    <button class="open_button"><h4>Copy all my contact info</h4></button>
                 </div>
                 </div>
             </div>
