added four buttons to modal

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 
     <!--e-mail modal-->
     <div class="email_modal">
-        <h3 style="float: left">Send me a mail! I'd love to hear from you!</h3><button class="close_button">&times;</button>
-        <div class="modal_content">
-        
+        <h4 style="float: left">My contact information. Click to copy</h4><button class="close_button">&times;</button>
+        <div class="column">
+            <button class="copyText_button"><p>My phone number</p></button>
+            <button class="copyText_button"><p>My email address</p></button>
+            <button class="copyText_button"><p>My current address</p></button>
+            <button class="copyText_button"><p>All contact information</p></button>
         </div>
     </div>
         
@@ -41,7 +44,7 @@
                 </div>
                 <!--information-->
                 <div class="text_boxes">
-                    <button class="open_button"><h4>Copy all my contact info</h4></button>
+                    <button class="open_button"><h4>Copy my contact info</h4></button>
                 </div>
                 </div>
             </div>
