update, copyText_butt display

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!--information-->
                 <div class="text_boxes">
                     <h4>My phone number</h4>
-                    <button class="copyText_button"><p>41294755</p></button> <!--p.copyText-button.text-boxes-->
+                    <p>41294755</p> <!--p.copyText-button.text-boxes-->
                 </div>
                 <!--information-->
                 <div class="text_boxes">
@@ -111,6 +111,6 @@
     <!--footer - red-->
     <div class="footer">
     </div>
-    <script src="emailModal.js">class</script> 
+    <script src="emailModal.js"></script> 
 </body>
 </html>
