removed column from modal

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
     <!--e-mail modal-->
     <div class="email_modal">
-        <h4 style="float: left">My contact information. Click to copy</h4><button class="close_button">&times;</button>
-        <div class="column">
-            <button class="copyText_button"><p>My phone number</p></button>
-            <button class="copyText_button"><p>My email address</p></button>
-            <button class="copyText_button"><p>My current address</p></button>
-            <button class="copyText_button"><p>All contact information</p></button>
-        </div>
+        <h4 style="float: left">My contact information. Click to copy</h4>
+        <button class="close_button">&times;</button>
+        <button class="copyText_button"><p>My phone number</p></button>
+        <button class="copyText_button"><p>My email address</p></button>
+        <button class="copyText_button"><p>My current address</p></button>
+        <button class="copyText_button"><p>All contact information</p></button>
     </div>
         
     <div class="column">
