--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--e-mail modal-->
     <div class="email_modal">
-        <h4>My contact information. Click to copy</h4>
+        <h4 style="float: left">My contact information. Click to copy</h4>
         <button class="close_button">&times;</button>
         <button class="copyText_button"><p>My phone number</p></button>
         <button class="copyText_button"><p>My email address</p></button>
