--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="email_modal">
         <h4 style="display: inline-block">My contact information. Click to copy</h4>
         <button class="close_button">&times;</button>
-        <button class="copyText_button"><p>My phone number</p></button>
-        <button class="copyText_button"><p>My email address</p></button>
-        <button class="copyText_button"><p>My current address</p></button>
-        <button class="copyText_button"><p>All contact information</p></button>
+        <button class="copyText_button" id="c1" onclick="handleClick(this.id)">My phone number</button> <!--handleClick(this.id) should send the id to copyTextFunction(buttonid)-->
+        <button class="copyText_button" id="c2" onclick="handleClick(this.id)">My email address</button>
+        <button class="copyText_button" id="c3" onclick="handleClick(this.id)">My current address</button>
+        <button class="copyText_button" id="c4" onclick="handleClick(this.id)">All contact information</button>
     </div>
         
     <div class="column">
