updated handleClick to function name
derp

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="email_modal">
         <h4 style="display: inline-block">My contact information. Click to copy</h4>
         <button class="close_button">&times;</button>
-        <button class="copyText_button" id="c1" onclick="handleClick(this.id)">My phone number</button> <!--handleClick(this.id) should send the id to copyTextFunction(buttonid)-->
-        <button class="copyText_button" id="c2" onclick="handleClick(this.id)">My email address</button>
-        <button class="copyText_button" id="c3" onclick="handleClick(this.id)">My current address</button>
-        <button class="copyText_button" id="c4" onclick="handleClick(this.id)">All contact information</button>
+        <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">My phone number</button>
+        <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">My email address</button>
+        <button class="copyText_button" id="c3" onclick="copyTextFunction(this.id)">My current address</button>
+        <button class="copyText_button" id="c4" onclick="copyTextFunction(this.id)">All contact information</button>
     </div>
         
     <div class="column">
