--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" type="text/css" href="frontstylesheet.css"/>
 </head>
 <body>
-    <!---->
-    <!--header - blue-->
     <!--header: banner picture-->
     <div class="htop">
        <p>HEADER</p>
+        <!--TODO: add banner-->
     </div>
 
     <!--e-mail modal-->
@@ -34,12 +33,12 @@
                 <!--information-->
                 <div class="text_boxes">
                     <h4>My phone number</h4>
-                    <p>41294755</p> <!--p.copyText-button.text-boxes-->
+                    <p>41294755</p>
                 </div>
                 <!--information-->
                 <div class="text_boxes">
                     <h4>Send me a mail</h4>
-                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a> <!--p.a.text-boxes-->
+                    <a href="mailto:sara.seacucumber@gmail.com"><p>sara.seacucumber@gmail.com</p></a>
                 </div>
                 <!--information-->
                 <div class="text_boxes">
