added button links to HTML
they only go to nrk, but fine for testing purposes

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                             <a href="https://github.com/SaraYohannes" target="_blank">My github account</a>
                         </div>
                         <div class="text_boxes">
-                            <p>This is a sketchfab link?</p>
+                            <a href="https://www.nrk.no">This is a sketchfab link?</a>
                         </div>
                         <div class="text_boxes">
-                            <p>This is a deviantart link?</p>
-                        </div>
+                            <a href="https://www.nrk.no">This is a deviantart link?</a>
+</div>                  </div>
                     </div>
                 </div>
             </div>
