--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </div>
                         <div class="text_boxes">
                             <a href="https://www.nrk.no">This is a deviantart link?</a>
-</div>                  </div>
+                        </div>
                     </div>
                 </div>
             </div>
