--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="column project_info">
             <div class="content_space">
                 <div class="text_boxes">
-                    <p>COLUMN: Projects information</p>
+                    <h4>Projects information</h4>
                 </div>
                 <div class="text_boxes">
                     <div class="column">
