--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--e-mail modal-->
     <div class="email_modal">
-        <h4 style="display: inline-block">My contact information. Click to copy</h4>
+        <h4 id="specialStyleHead4">My contact information. Click to copy</h4>
         <button class="close_button">&times;</button>
         <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">My phone number</button>
         <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">My email address</button>
