added modal heading and exit button in own div
hopefully it will seperate the two from the other elements in the modal

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     <!--e-mail modal-->
     <div class="email_modal">
-        <h4 id="specialStyleHead4">My contact information. Click to copy</h4>
-        <button class="close_button">&times;</button>
+        <div>
+            <h4 id="specialStyleHead4">My contact information. Click to copy</h4>
+            <button class="close_button">&times;</button>
+        </div>
         <button class="copyText_button" id="c1" onclick="copyTextFunction(this.id)">My phone number</button>
         <button class="copyText_button" id="c2" onclick="copyTextFunction(this.id)">My email address</button>
         <button class="copyText_button" id="c3" onclick="copyTextFunction(this.id)">My current address</button>
