--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="text_boxes">
                     <h3>RELEVANT EDUCATION</h3>
                     <p>Information</p>
-                    <div class="column">
+                    <div>
                         <div class="text_boxes">
                             <a href="https://github.com/SaraYohannes" target="_blank">My github account</a>
                         </div>
