added styling portf_button

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <p>Information</p>
                     <div class="text_boxes">
                         <div>
-                            <a href="https://github.com/SaraYohannes" target="_blank">My github account</a>
+                            <a href="https://github.com/SaraYohannes" target="_blank" id="portf_button">My github account</a>
                         </div>
                         <div>
-                            <a href="https://www.nrk.no">This is a sketchfab link?</a>
+                            <a href="https://www.nrk.no" target="_blank" id="portf_button">This is a sketchfab link?</a>
                         </div>
                         <div>
-                            <a href="https://www.nrk.no">This is a deviantart link?</a>
+                            <a href="https://www.nrk.no" target="_blank" id="portf_button">This is a deviantart link?</a>
                         </div>
                     </div>
                 </div>
