update portf buttons are in a column

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="text_boxes">
                     <h3>RELEVANT EDUCATION</h3>
                     <p>Information</p>
-                    <div class="text_boxes">
+                    <div class="column">
                         <div>
                             <a href="https://github.com/SaraYohannes" target="_blank" id="portf_button">My github account</a>
                         </div>
