testing making images buttons

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
         <div class="column project_info">
             <div class="content_space">
                 <div class="text_boxes">
-                    <h4>Projects information</h4>
+                    <h4>Project information</h4>
                 </div>
                 <div class="text_boxes">
                     <div class="column">
-                    <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
-                    <div class="text_boxes">
-                        <h3>Name of project (one)</h3>
-                        <p>Description of project with link...</p>
-                    </div>
+                        <button></button><img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" /></button>
+                        <div class="text_boxes">
+                            <h3>Name of project (one)</h3>
+                            <p>Description of project with link...</p>
+                        </div>
                     </div>
                 </div>
                 <div class="text_boxes">
