--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="text_boxes">
                     <div class="column">
-                        <button></button><img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" /></button>
+                        <button><img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" /></button>
                         <div class="text_boxes">
                             <h3>Name of project (one)</h3>
                             <p>Description of project with link...</p>
