--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
                     <h4>Project information</h4>
                 </div>
                 <div class="text_boxes">
-                    <div class="column">
-                        <button><img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" /></button>
-                        <div class="text_boxes">
-                            <h3>Name of project (one)</h3>
-                            <p>Description of project with link...</p>
-                        </div>
-                    </div>
+                    <button>
+                        <div class="column">
+                            <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
+                            <div class="text_boxes">
+                                <h3>Name of project (one)</h3>
+                                <p>Description of project with link...</p>
+                            </div>
+                        </div>  
+                    </button>
                 </div>
                 <div class="text_boxes">
                     <div class="column">
