added all three example projects as buttons
they are now ready to be styled!

--- a/index.html
+++ b/index.html
@@ -86,27 +86,31 @@
                                 <h3>Name of project (one)</h3>
                                 <p>Description of project with link...</p>
                             </div>
-                        </div>  
+                        </div>
                     </div>
                 </button>
-                <div class="text_boxes">
-                    <div class="column">
-                        <div class="text_boxes">
-                            <h3>Name of project (two)</h3>
-                            <p>Description of project with link...</p>
-                        </div>
-                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
-                    </div>
-                </div>
-                <div class="text_boxes">
-                    <div class="column">
-                        <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
-                        <div class="text_boxes">
-                            <h3>A super long name of this fantastic project (three)</h3>
-                            <p>Description of project with link...</p>
+                <button>
+                    <div class="text_boxes">
+                        <div class="column">
+                            <div class="text_boxes">
+                                <h3>Name of project (two)</h3>
+                                <p>Description of project with link...</p>
+                            </div>
+                            <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                         </div>
                     </div>
-                </div>
+                </button>
+                <button>
+                    <div class="text_boxes">
+                        <div class="column">
+                            <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
+                            <div class="text_boxes">
+                                <h3>A super long name of this fantastic project (three)</h3>
+                                <p>Description of project with link...</p>
+                            </div>
+                        </div>
+                    </div>
+                </button>
             </div>
         </div>
     </div>
