--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                             <div class="text_boxes">
-                                <h3>Name of project (one)</h3>
+                                <h3>A super long name of this fantastic project (one)</h3>
                                 <p>Description of project with link...</p>
                             </div>
                         </div>
