added projectf_button styling to project buttons

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="text_boxes">
                     <h4>Project information</h4>
                 </div>
-                <button>
+                <button id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </button>
-                <button>
+                <button id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <div class="text_boxes">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </button>
-                <button>
+                <button id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
