test change button to a

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="text_boxes">
                     <h4>Project information</h4>
                 </div>
-                <button id="projectf_button">
+                <a id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                </button>
+                </a>
                 <button id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
