--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </a>
-                <button id="projectf_button">
+                <a id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <div class="text_boxes">
@@ -99,8 +99,8 @@
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                         </div>
                     </div>
-                </button>
-                <button id="projectf_button">
+                </a>
+                <a id="projectf_button">
                     <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                </button>
+                </a>
             </div>
         </div>
     </div>
