--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 </div>
                 <a id="projectf_button">
                     <div class="text_boxes" id="projectf_button">
-                        <div class="column" id="projectf_button">
+                        <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
-                            <div class="text_boxes" id="projectf_button">
+                            <div class="text_boxes">
                                 <h3>A super long name of this fantastic project (one)</h3>
                                 <p>Description of project with link...</p>
                             </div>
