--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h4>Project information</h4>
                 </div>
                 <a id="projectf_button">
-                    <div class="text_boxes" id="projectf_button">
+                    <div class="text_boxes">
                         <div class="column">
                             <img src="Item_light_parafinlampe_UNUSED_v0.png" class="project_illustration" />
                             <div class="text_boxes">
